--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 os: osx
-osx_image: xcode10.2
+osx_image: xcode11.1
 language: swift
 before_install:
   - gem update --system
@@ -7,4 +7,5 @@ before_install:
 script:
   - bundle install
   - bundle exec pod install
-  - xcodebuild -workspace Demos.xcworkspace -scheme Demos -destination 'platform=iOS Simulator,OS=12.2,name=iPhone XS Max' build-for-testing test
+  - cd Pods
+  - xcodebuild -scheme ALLKit -destination 'platform=iOS Simulator,OS=13.1,name=iPhone 11 Pro Max' build-for-testing test
